[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibr-defused-algorithms"
version = "0.3.0"
description = "TensorFlow IBR5, IBR6, and fused IBR algorithms with MobileNetV2 variants"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = "MIT"
authors = [
  { name = "Abhishek Pandey" }
]
dependencies = [
  "tensorflow>=2.16"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]

dev = [
  "pytest>=7.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
